# gtree

./: CMakeLists.txt  LICENSE  README.md  main.cxx
gtree/: CMakeLists.txt  descendants_proxy.cxx  descendants_proxy.h  fwd.h  person.cxx  person.h  tree.cxx  tree.h
tests/: CMakeLists.txt  DescendantsTraversalTest.cxx  PersonHierarchyTest.cxx  PersonTest.cxx  main.cxx
